@@ -4,5 +4,5 @@ test:
 	cd examples; make test-ghc
 
 commit:
-	darcs record -a -m "Committed from the Makefile"
+	darcs record -a -m "See ChangeLog"
 	darcs push -a
